# port-scanner

./: .gitignore  README.md  desktop.ini  pyproject.toml  test.xml
examples/: policy.example.yml
portsense/: __init__.py  cli.py  config.py  dns_resolution.py  models.py
portsense/analysis/: __init__.py  confidence.py  osint.py  risk.py
portsense/evidence/: screenshots.py
portsense/parsing/: __init__.py  nmap_xml.py
portsense/report/: __init__.py  jsonout.py  markdown.py
portsense/utils/: __init__.py  time.py
portsense/vuln/: nuclei.py  nuclei_parser.py  nvd.py
scripts/: scan_nmap.sh
tests/: test_cli_nuclei.py  test_cli_screenshots_smoke.py  test_cli_smoke.py  test_confidence.py  test_dns_resolution.py  test_nmap_xml.py  test_nuclei.py  test_report.py  test_risk.py  test_screenshots_module.py
tests/vuln/: test_vuln_enrichment.py
